force-app/main/default/objects/ServiceAppointment/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Compromissos de serviços</relationshipLabel>
    <relationshipName>CompromissosServico</relationshipName>
    <type>Lookup</type>
</CustomField>