force-app/main/default/objects/ServiceAppointment/fields/ResponsavelVisita__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelVisita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para associar o responsável pela visita ao compromisso.</description>
    <label>Responsável pela Visita</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Compromissos de serviços</relationshipLabel>
    <relationshipName>Compromissos_de_servicos</relationshipName>
    <type>Lookup</type>
</CustomField>