force-app/main/default/objects/ServiceAppointment/fields/StatusBodyIntegracaoNivello__c.field-meta.xml
<CustomField>
    <fullName>StatusBodyIntegracaoNivello__c</fullName>
    <description>Status Code e Body do retorno da integração Nivello</description>
    <label>Status e Body Integração Nivello</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>