force-app/main/default/objects/ServiceAppointment/fields/SucessoIntegracaoNivello__c.field-meta.xml
<CustomField>
    <fullName>SucessoIntegracaoNivello__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar se houve sucesso na integração Nivello ao enviar dados.</description>
    <label>Sucesso na Integração Nivello</label>
    <type>Checkbox</type>
</CustomField>