force-app/main/default/objects/ServiceAppointment/validationRules/Endereco_obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Endereco_obrigatorio</fullName>
    <active>false</active>
    <description>O Endereço é obrigatório.</description>
    <errorConditionFormula>ISBLANK(Address ) ||
				 ISNULL(Address)</errorConditionFormula>
    <errorMessage>Endereço Obrigatório.</errorMessage>
</ValidationRule>